adicionado dados em aba perfil & modificado tela inicial

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,8 +4,19 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true" color="light">
+
+  <div id="logo"><img  src="../../assets/android-chrome-192x192.png" width="30%" alt=""></div>
 
   <ion-searchbar placeholder="Procurar notícia"></ion-searchbar>
 
+  <br>
+
+  <ion-item>
+    <ion-label>My Item</ion-label>
+  </ion-item>
+
+
 </ion-content>
+
