--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,44 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Perfil
-    </ion-title>
+    <ion-title> Perfil </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="topo">
+    <ion-avatar>
+      <img src="../../assets/android-chrome-192x192semnome.png" />
+    </ion-avatar>
+
+    <h4>Maurício Santos</h4>
+  </div>
+
+  <br>
+  
+  <ion-item>
+    <ion-label>Social</ion-label>
+    <ion-badge slot="end" color="danger">99</ion-badge>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Carteira</ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Segurança</ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Conta</ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Sobre</ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Sair</ion-label>
+  </ion-item>
 
   <app-explore-container name="Tab 3 page"></app-explore-container>
 </ion-content>
